app/assets/stylesheets/components/_search_form.scss
#song-search {
  .query {
    border-radius: 25px;
    box-sizing: border-box;
    font-size: 22px !important;
    text-align: center;
    outline: none;
    display: block;
    margin: 40px auto;
    width: 90%;
    padding: 7px;
    border: 1px solid $gray;
    background: transparent;
    box-shadow: none;
    font: 16px Arial, Helvetica, sans-serif;
    height: 45px;
    &:focus {
      box-shadow: none;
    }
  }
}

#new_song {
  height: 500px;
}

input[type=radio]:checked + label {
  background-color: $orange;
}

.song-list {
  padding: 10px;
}

.item-radio {
  display: flex;
}

.song-item {
  display: flex;
  background-color: #F3F3F3;
  transition: background-color .2s ease;
  width: 100%;
  height: 105px;
  margin: 10px 0;
  border-radius: 3px;
  box-shadow: 0px 0px 9px rgba(20, 20, 20, 0.25);
  align-items: center;


  .song-item-info {
    width: 100%;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    margin-top: 15px;
    margin-left: 10px;
    color: #6D6D6D;
    text-align: left;
  }
  img {
    height: 85px;
    width: 85px;
    margin: 10px;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.31);
  }
}


.learn-bar {
  margin-top: 50px;
  background-color: white;
  color: $gray;
  padding: 10px;
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.07);
  border-radius: 3px;
  h1 {
    font-size: 25px;
    margin: 0px 15px 14px 10px;
    text-align: left;
  }

  p {
    text-align: right;
    margin: 0;
    margin: 15px 15px 7px 15px;
  }

  .learn-bar-albums {
    display: flex;
    justify-content: space-around;
    img {
      width: 110px;
      height: 110px;
      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.31);
    }
  }
}

